# fimbox

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
config/: deny_branch_zero.lst  deny_branches.lst  deny_unit.lst
data/: acceptable_sites_for_rating_curves.parquet  final_bathymetry_ehydro_ohrfc.gpkg  mannings_global_optz.parquet  usgs_gages_acceptance.parquet
docs/study_boundary/: study_area.gpkg
docs/test_boundary/: test_smallB.qix  test_smallB.shp  test_smallB.shx
scripts/: calibrate_n_recurrence.py  open_parquet.py  plot_calibration_analysis.py  plot_calibration_slides.py  plot_src_calibration.py  plot_src_calibration_inset.py  plot_src_ensemble.py  plot_srcs.py  plot_workflow_chart.py  s00_study_boundary.py  s01_download_dem.py  s02_stage1_all_hucs.py  s02_stage1_single_huc.py  s03_stage2_all_hucs.py  s03_stage2_single_huc.py  s04_usgs_gage_crosswalk.py  s04_usgs_gage_crosswalk_all_hucs.py  s05_calibrate_n_recurrence_all_hucs.py  s05_revert_uncalibrated_srcs.py  s06_stage3_all_hucs.py  s06_stage3_single_huc.py  s07_stage4_all_hucs.py  s07_stage4_single_huc.py  s08_stage5_all_hucs.py  s08_stage5_single_huc.py
src/fimbox/: __init__.py  _dask.py  _skip_if_valid.py  logging_utils.py
src/fimbox/config/: calculate_rasters.env
src/fimbox/config/huc_lists/: full_huc_list.lst
src/fimbox/fimgeneration/: __init__.py  inundator.py  mosaic.py  pipeline.py
src/fimbox/preprocessing/: README.md  __init__.py  hucs.py  preprocess_area.py  source_naming.py
src/fimbox/preprocessing/calculate_branch/: __init__.py  _wbt_safe.py  add_crosswalk.py  adjust_floodplains.py  area_processer.py  backend.py  branch_derivation.py  build_src.py  calculate_allbranches.py  calculate_branchzero.py  convert_to_int16.py  create_hand.py  evaluate_crosswalk.py  filter_catchments.py  flowacc_dem.py  flowdir_dem.py  gage_catchments.py  gage_crosswalk.py  heal_bridges_osm.py  hydroenforce_dem.py  levee_rasterize.py  make_rem.py  mask_to_catchments.py  models.py  outputs_cleanup.py  process_branches.py  process_roads_fimpact.py  reach_rasterize.py  split_reaches.py  stages_catchlist.py  streamnet_reaches.py  thalweg_adjustment.py  workflow.py
src/fimbox/preprocessing/calibrate/: __init__.py  _stub.py  aggregate_branches_to_aoi.py  bathymetric_adjustment.py  identify_src_bankfull.py  longitudinal_flow_adjustment.py  nonmonotonic_src_adjustment.py  pipeline.py  reset_htable_src.py  src_adjust_ras2fim_rating.py  src_adjust_spatial_obs.py  src_adjust_usgs_rating_trace.py  src_manual_calibration.py  subdiv_chan_obank_src.py  thalweg_notches_adjustment.py
src/fimbox/preprocessing/calibrate_ratingcurve/: __init__.py  _common.py  aggregate.py  dem_adjust.py  logscan.py  pipeline.py  reset.py  src_adjust.py  src_calibrate.py  src_optimization.py
src/fimbox/preprocessing/download_data/: __init__.py  area_masks.py  dem_process.py  nfhl_data.py  nhdplus.py  nld_data.py  osm_data.py  usgs_gages.py  utils.py
src/fimbox/preprocessing/huc_test/: README.md  hucs.py
src/fimbox/preprocessing/nhd_data/: README.md  __init__.py  dem_process.py  nfhl_data.py  nhdplus.py  utils.py
src/fimbox/preprocessing/process_area/: __init__.py  im_runner.py
src/fimbox/preprocessing/process_bridgedem/: __init__.py  bridge_dem_diff.py  bridge_lidar_raster.py
src/fimbox/streamflow/: __init__.py  _common.py  geoglows.py  nwm_forecast.py  nwm_retrospective.py  pipeline.py  plotting.py  statistics.py  usgs.py
tests/: conftest.py  test_branchprocessing.py  test_calculate_branch.py  test_calibrate_pipeline.py  test_downloaddata.py  test_fimgeneration.py  test_generate_dem_diff.py  test_getallinputdata.py  test_getnhddata.py  test_nwmstreamflow.py  test_preprocessDEM.py  test_preprocessing_hucs.py  test_process_branches.py
