[project]
name = "fimbox"
version = "0.1.0"
description = "A modular open-source testbed framework to standardize Flood Inundation Mapping simulations and evaluation with custom datasets and hydrologic parameters with reproducible workflows."
authors = [{ name = "Supath Dhital", email = "sdhital@ua.edu" }]
maintainers = [{ name = "Supath Dhital", email = "sdhital@ua.edu" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pynhd",
    "pygeohydro",
    "py3dep",
    "geopandas",
    "tqdm>=4.67.1",
    "osmnx>=2.0.7",
    "py7zr>=1.1.0",
    "dask[distributed]>=2024.1.0",
    "rasterio>=1.3",
    "scipy>=1.11",
    "laspy>=2.0",
    "lazrs>=0.6",
    "whitebox>=2.3",
    "fiona>=1.10.1",
    "rasterstats>=0.19",
    "teehr",
    "s3fs",
    "xarray",
    "netCDF4",
    "beautifulsoup4",
    "requests",
    "matplotlib",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "black"
]

[project.urls]
Homepage = "https://github.com/sdmlua/fimbox"
Repository = "https://github.com/sdmlua/fimbox"
Issues = "https://github.com/sdmlua/fimbox/issues"

[build-system]
requires = ["setuptools>=69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
